[package]
name = "nieufnibackend"
version = "0.1.0"
authors = ["niedzwiedzw <niedzwiedzwo@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
comrak = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json", "serve"]
